--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@ plugins {
     id 'java'
 }
 
+
+archivesBaseName = 'myname'
 group = 'org.example'
-version = '1.0-SNAPSHOT'
+version = '1.0'
 
 repositories {
     mavenCentral()
